--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,14 @@
     
 body {
-    margin: 60px auto;
-    width: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    margin: 0px auto;
+    height: auto;
+    width: 760px;
+    border: 1px solid #006633;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:Arial, Helvetica, 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -42,3 +46,4 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
