--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
     
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Arial", "Helvetica", sans-serif;
     font-size: 12px;
     margin: 0px auto;
     height: auto;
@@ -8,7 +8,7 @@ body {
     border: 1px solid #006633;
 }
 nav ul, footer ul {
-    font-family:Arial, Helvetica, 'Sans-Serif';
+    font-family:"Arial", "Helvetica", sans-serif;
     padding: 0px;
     list-style: none;
     font-weight: bold;
